# DexterousHands

./: .gitignore  .gitmodules  README.md
assets/urdf/robotiq/: robotiq-3f-gripper_finger_articulated_macro.xacro  robotiq-3f-gripper_mesh.urdf
bi-dexhands/: CMakeLists.txt  finger_map.py  test_env.py  test_hrl.py  test_lm.py  train.py
bi-dexhands/algorithms/hrl/: grasp_place.manip  hrl_ppo.py
bi-dexhands/algorithms/lm/: check_utils.py  lm_engine.py  program_synthesis.py
bi-dexhands/cfg/: RobotiqGraspAndPlaceSingle.yaml  ShadowHandGraspAndPlaceDecouple.yaml  ShadowHandGraspAndPlaceSingle.yaml  ShadowHandGraspAndPlaceV2Single.yaml
bi-dexhands/cfg/ppo/: config.yaml
bi-dexhands/cfg/teleop/: teleop_config.yaml
bi-dexhands/tasks/: robotiq_grasp_and_place_single.py  shadow_hand_grasp_and_place_decouple.py  shadow_hand_grasp_and_place_single.py  shadow_hand_grasp_and_place_v2_single.py
bi-dexhands/test/: grasp.manip  grasp_place.manip  grasp_place.sketch  grasp_place_v2.manip  gym_states.pt  release.manip  teleop.manip
bi-dexhands/utils/: config.py  control_utils.py  math_utils.py  parse_task.py  process_sarl.py
bi-dexhands/utils/teleop/: finger_map.cpp  mediapipe_hand_pose.py
prompt/: cook.md  sort.md  water_flower.md
